# CGD

./: .gitignore  AUDIT_SUMMARY.md  STEP_1_CODEBASE_OVERVIEW.md  STEP_2_DETAILED_ANALYSIS_AND_TEST_PLAN.md  STEP_3_POTENTIAL_ISSUES_REPORT.md  STEP_4_INTEGRATION_ANALYSIS.md  STEP_5_TESTING_FRAMEWORK.md  STEP_6_TEST_EXECUTION_LOG.md  pyproject.toml  requirements.txt  standalone_consistency_check.py
.github/workflows/: ci.yml
cgd/: __init__.py
cgd/core/: __init__.py  source.py  universe.py
cgd/dynamics/: __init__.py  force.py  potential.py  solvers.py
cgd/dynamics_jax/: __init__.py  force_jax.py  potential_jax.py  solvers_jax.py
cgd/geometry/: __init__.py  _jax_impl.py  simplex.py  transformations.py
cgd/measure/: __init__.py  calibration.py  discovery.py  purification.py  refinement.py
cgd/utils/: __init__.py  data_helpers.py
cgd/visualize/: __init__.py  atlas.py  fingerprints.py  landscape.py
cgd/workflows/: __init__.py  analysis.py
tests/: __init__.py  helpers.py  test_dynamics.py  test_geometry.py
tests/core/: test_source.py  test_universe.py
tests/dynamics/: test_potential_and_force.py  test_solvers.py  test_solvers_consistency.py
tests/dynamics_jax/: test_solvers_jax.py
tests/geometry/: test_backend_consistency.py  test_consistency.py  test_simplex.py  test_transformations.py
