[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgd"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "joblib",
    "matplotlib",
    "python-ternary",
]
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "jax[cpu]", "jaxlib"]

[tool.pytest.ini_options]
markers = [
    "core: marks tests as core functionality",
    "validation: marks tests as validation and error handling",
    "consistency: marks tests as checking for theoretical or backend consistency",
    "performance: marks tests as performance benchmarks",
]
